@@ -1,8 +1,14 @@
+2013-07-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/algebra/files.spad.pamphlet,
+	src/lisp/primitives.lisp: Really use Lisp type
+	declarations.
+
 2013-07-28  Ralf Hemmecke  <ralf@hemmecke.org>
 
 	* src/doc/Makefile.in: Fix mobius build with optional xvfb-run.
 
-2013-07-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+2013-07-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/i-spec1.boot: Allow idempotent redeclaration
 	of mapping mode.
